Change link for vector

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,28 +4,19 @@
 - name: Ensure prerequisites are installed
   ansible.builtin.apt:
     name:
+      - curl
       - apt-transport-https
       - ca-certificates
-      - curl
     state: present
     update_cache: true
   become: true
   tags: [install]
 
-- name: Add Vector apt repo (trusted=yes, skip GPG check)
-  ansible.builtin.copy:
-    dest: "{{ vector_repo_list_path }}"
-    content: |
-      deb [trusted=yes] https://packages.timber.io/vector/apt stable main
-    owner: root
-    group: root
-    mode: '0644'
-  become: true
-  tags: [install]
-
-- name: Update apt cache after adding Vector repo
-  ansible.builtin.apt:
-    update_cache: true
+- name: Run Vector setup script (adds repo automatically)
+  ansible.builtin.shell: |
+    curl -L https://setup.vector.dev | bash
+  args:
+    warn: false
   become: true
   tags: [install]
 
@@ -33,6 +24,7 @@
   ansible.builtin.apt:
     name: vector
     state: present
+    update_cache: true
   become: true
   tags: [install]
 
