--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,8 +15,8 @@
 - name: Run Vector setup script (adds repo automatically)
   ansible.builtin.shell: |
     curl -L https://setup.vector.dev | bash
-  args:
-    warn: false
+  #args:
+  #  warn: false
   become: true
   tags: [install]
 
